--- a/src/index.css
+++ b/src/index.css
@@ -58,8 +58,13 @@ button {
     padding: 0.7em;
     width: 20%;
     border-radius: 3px;
+    font-size: 16px;
+    cursor: pointer;
 }
 
+.btns:hover {
+  opacity: 0.7;
+}
 .btn--prev {
     background-color: #e8edf5;
     color: #01d141c;
